<resources>
    <string name="app_name">Rivalizer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="placeholder_short">Placeholder Text</string>
    <string name="games">Juegos</string>
    <string name="places">Lugares</string>
    <string name="rivals">Rivales</string>
    <string name="title_activity_game_view">Detalles del Juego</string>
    <string name="wheretoplay">¿Dónde jugar?</string>
    <string name="rules">Reglas</string>
    <string name="description">Descripción</string>
    <string name="title_activity_game_register">Registra un nuevo juego</string>
    <string name="write_name_game">Escribe el nombre del juego:</string>
    <string name="write_game_description">Describe brevemente el juego:</string>
    <string name="write_game_rules">Describe cómo se juega:</string>
    <string name="choose_game_image">Sube una imagen representativa \n del juego (opcional):</string>
    <string name="choose_game_places">Marca en qué lugares puedes jugar a este juego:</string>
    <string name="guide_game_name">¿Has comprobado si el juego ya está en la lista?</string>
    <string name="guide_game_description">Ofrece una información superficial. ¿A qué público va dirigido? ¿Cuántos pueden jugar? ¿A quién gustará?</string>
    <string name="guide_game_rules">Opcional. Indica brevemente los objetivos del juego y las reglas más representativas.</string>
    <string name="send_game">Enviar este juego</string>
    <string name="fav_local">Locales en común:</string>
    <string name="fav_games">Juegos favoritos:</string>
    <string name="title_activity_player_register">Registro de Usuario</string>
    <string name="email_text">Email:</string>
    <string name="email_write">Escribe tu dirección de email.</string>
    <string name="name_text">Nombre:</string>
    <string name="name_write">Elige un nombre de usuario.</string>
    <string name="profile_uri_text">Elige una imagen de perfil.</string>
    <string name="password_write">Escribe tu contraseña.</string>
    <string name="password_text">Elige una clave segura.</string>
    <string name="confirm_password_text">Confirma tu contraseña:</string>
    <string name="confirm_password_write">Recuerda que deben ser iguales.</string>
    <string name="title_activity_place_register">Registra un nuevo local</string>
    <string name="local_name_text">Nombre del local:</string>
    <string name="local_name_write">Procura utilizar el nombre exacto</string>
    <string name="localization">Escribe la dirección:</string>
    <string name="review_text">Escribe una breve reseña:</string>
    <string name="review_local_write">Procura ser claro, neutral y no emplear demasiadas palabras.</string>
    <string name="local_uri_photo">Elige una imagen representativa del local:</string>
    <string name="place_send">Enviar este local</string>
    <string name="title_activity_place_view">Detalles del Local</string>
    <string name="title_activity_login_view">¡Bienvenido a Rivalizer!</string>
    <string name="login_name_text">Introduce tu email:</string>
    <string name="login_password_text">Introduce tu clave de acceso:</string>
    <string name="button_login">IDENTIFICATE</string>
    <string name="fulfill_register">Completar Registro</string>
    <string name="go_register">Registrate</string>
    <string name="title_activity_player_location">PlayerLocation</string>
    <string name="set_your_location">Indica tu ubicación:</string>
    <string name="write_zip_code">Indica tu código postal (opcional, indícalo para ver las tiendas cercanas):</string>
    <string name="zip_code_hint">Otros usuarios no verán esta información.</string>
    <string name="upload_photo">Subir foto</string>
    <string name="add_to_your_games">Añadir a tus juegos</string>
    <string name="remove_from_your_games">Quitar de tus juegos</string>
    <string name="adscribe_to">Adscribirse</string>
    <string name="view_map_place">Ver en el mapa</string>
    <string name="unadscribe_to">Desadscribirse</string>
    <string name="title_activity_generic_view">Toca dos veces una casilla para marcarla.</string>
    <string name="forward">Adelante</string>
    <string name="review">Reseña</string>
    <string name="available_games">Juegos Disponibles</string>
    <string name="title_activity_rival_view">Perfil de Rival</string>
    <string name="common_games">Juegos del rival:</string>
    <string name="common_places">Lugares del rival:</string>
    <string name="view_my_profile">Ver mi perfil</string>
    <string name="location_details">Calle, Número, Código Postal, Ciudad</string>
    <string name="title_activity_chat_view">ChatView</string>
    <string name="write_a_message">Escribe un mensaje</string>
    <string name="chat_send_button">ENVIAR</string>
    <string name="title_activity_profile_view">ProfileView</string>
</resources>
