<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.PlayerRegister"
    tools:showIn="@layout/activity_player_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_write" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_write" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_zip_code"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code_hint" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_uri_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/upload_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo" />
            </LinearLayout>

            <ImageView
                android:id="@+id/game_prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_write"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:password="true" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_register_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_write"
            android:password="true" />

        <Button
            android:id="@+id/fulfill_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/fulfill_register" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>