<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Views.PlaceRegister"
    tools:showIn="@layout/activity_place_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_name_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/place_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/local_name_write" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localization"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_details" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/review_text" />

        <EditText
            android:id="@+id/place_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review_local_write" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_uri_photo"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/upload_photo_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo" />
            </LinearLayout>


            <ImageView
                android:id="@+id/place_prev"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>


        <Button
            android:id="@+id/send_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/place_send" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>